2010-03-14  Darin Adler  <darin@apple.com>

        Tell Subversion about more directories that expect to have .pyc files.

        * Scripts/webkitpy/init: Added property svn:ignore.
        * Scripts/webkitpy/patch: Added property svn:ignore.
        * Scripts/webkitpy/thirdparty: Added property svn:ignore.
        * Scripts/webkitpy/thirdparty/autoinstalled: Added property svn:ignore.

2010-03-14  Antti Koivisto  <koivisto@iki.fi>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=35146
        Support tiled backing store

        QtLauncher support and build flag in build-webkit.

        * QtLauncher/main.cpp:
        (LauncherWindow::applyPrefs):
        (LauncherWindow::toggleTiledBackingStore):
        (LauncherWindow::toggleResizesToContents):
        (LauncherWindow::createChrome):
        (LauncherApplication::handleUserOptions):
        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::WebViewGraphicsBased):
        (WebViewGraphicsBased::setResizesToContents):
        (WebViewGraphicsBased::resizeEvent):
        * QtLauncher/webview.h:
        * Scripts/build-webkit:

2010-03-13  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by Adam Barth.

        The webkit-patch script now displays a warning if run using
        a version of Python less than 2.5.  This will help users
        understand why webkit-patch is erroring out if they are
        using Python 2.4, for example.

        https://bugs.webkit.org/show_bug.cgi?id=31533

        * Scripts/webkit-patch:
          - Moved most of the file contents to webkitpy/patch/patcher.py
            so the Python version can be checked before interpreting
            any code that can cause the script to error out.
          - Added a configure_logging() method to enable any version
            warnings to show up.
          - Added a main() method with calls to configure_logging(),
            check_version(), and the main webkit patch method.
